# ArbSimulation

./: CMakeLists.txt  README.md
configs/: default.json  local_run.json
notebooks/: research.ipynb
reports/: trades_sample_X0.5_Y1_Z-150_latency.csv  trades_sample_X0.5_Y1_Z-75_latency.csv  trades_sample_X0.5_Y2_Z-150.csv  trades_sample_X1_Y2_Z-150.csv  trades_sample_X2_Y1_Z-150_latency.csv  trades_sample_X2_Y2_Z-150.csv  trades_sample_X2_Y2_Z-150_latency.csv
src/: DTO.hpp  arbitrage.hpp  csv_io.hpp  definitions.h  exceptions.hpp  main.cpp  observer.hpp  simulation.hpp  strategy.hpp  strategy_base.hpp
tests/: arbitrage_strategy.hpp  csv_io.hpp  simulation.hpp  strategy.hpp  strategy_base.hpp  tests.cpp
tests/data/: arb_strategy_test_A.csv  arb_strategy_test_B.csv  csv_io_test_case_1.csv  csv_io_test_case_2.csv  csv_io_test_case_3.csv  order_matcher_test_1.csv  order_matcher_test_2.csv
